# freally-midi-master

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EULA.md  LICENSE  README.md  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml  verify-downloads.yml
data/: _defaults.json
data/genres/: boom-bap.json  chicago-drill.json  country-train.json  jerk.json  liquid-dnb.json  ny-drill.json  phonk.json  plugg.json  pluggnb.json  pop-2000s.json  rage.json  rnb-2000s.json  trap.json  uk-drill.json  west-coast-club.json
data/kits/trap-default/: kit.json
data/schema/: artist-style.schema.json
docs/: credits.md  daw-matrix.md
docs/legal/: disclaimer.md
docs/runbooks/: release.md
e2e/: fonts.spec.ts  i18n.spec.ts  phase-gate.spec.ts  smoke.spec.ts
engine/: Cargo.toml
engine/src/: context.rs  humanize.rs  lib.rs  midi.rs  pattern.rs  rng.rs  theory.rs
engine/src/dataset/: files.rs  inherit.rs  mod.rs  schema.rs  validate.rs
engine/src/generators/: drums.rs  grid.rs  mod.rs  rolls.rs
engine/tests/: bass808.rs  dataset.rs  drums_core.rs  drums_hats.rs  edge_cases.rs  fills.rs  genre_invariants.rs  golden.rs  humanize.rs  merge_equivalence.rs  rolls.rs
engine/tests/snapshots/: rage-7-4bar.json  rage-7-4bar.mid  trap-2024-8bar.json  trap-2024-8bar.mid  trap-7-4bar.json  trap-7-4bar.mid  uk-drill-7-4bar.json  uk-drill-7-4bar.mid
scripts/: assert-bundled.mjs  check-denylist.mjs  ci-local.mjs  screenshot-app.mjs  vendor-fonts.mjs
src/: App.test.tsx  App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bugreport.rs  dataset.rs  lib.rs  main.rs  tray.rs
src-tauri/src/export/: drag.rs  mod.rs
src-tauri/src/store/: mod.rs  settings.rs
src-tauri/tests/: plugins_registered.rs
src/assets/fonts/: fonts-scripts.css  fonts.css  fonts.test.ts
src/components/BugReport/: BugReport.css  BugReport.tsx  ipc.ts
src/components/ExportChip/: ExportChip.css  ExportChip.tsx
src/components/Settings/: About.tsx  Settings.css  Settings.tsx  categories.ts
src/components/Updates/: Updates.css  Updates.tsx
src/components/layout/: CenterStage.tsx  LeftRail.tsx  ResizeHandles.tsx  RightRail.tsx  Section.tsx  TitleBar.tsx  TransportBar.tsx  ViewMenu.tsx  layout.css
src/i18n/: index.ts  locales.test.ts  locales.ts
src/i18n/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  ru.json  tr.json  uk.json  vi.json  zh-CN.json
src/lib/: ipc-mock.ts  ipc-types.ts  ipc.ts  roster.test.ts  roster.ts
src/state/: storage.ts  theme.ts  ui.ts
src/styles/: tokens.contrast.test.ts  tokens.css
tools/datasetc/: Cargo.toml
tools/datasetc/src/: main.rs
tools/datasetc/tests/: cli.rs
tools/kitgen/: Cargo.toml
tools/kitgen/src/: main.rs  voices.rs  wav.rs
