[package]
name = "engine"
description = "Pure procedural music-generation engine for Freally MIDI Master. No Tauri types, no network, no AI/ML."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_chacha = "0.9"
ts-rs = "11"

[dev-dependencies]
serde_json = "1"
