[package]
name = "datasetc"
description = "Validate, lint and report on the Freally MIDI Master style dataset."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints.rust]
unsafe_code = "forbid"

[dependencies]
engine = { path = "../../engine", version = "0.1.0" }
serde_json = "1"
# default-features = false keeps the optional HTTP/file reference resolvers out.
# Remote $ref resolution would put a network client in the build, which the CI
# denylist forbids and the dataset has no use for — every $ref here is local.
jsonschema = { version = "0.48", default-features = false }
