[package]
name = "kitgen"
description = "Synthesizes Freally MIDI Master's preview one-shot kits from scratch."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints.rust]
unsafe_code = "forbid"

[dependencies]
engine = { path = "../../engine", version = "0.1.0" }
serde_json = "1"
rand = "0.9"
rand_chacha = "0.9"
